kotlin-ide/idea/testData/multiplatform/diamondSeesTwoActuals/right/right.kt
package sample

actual class <!LINE_MARKER("descr='Has declaration in common module'")!>A<!> /* Right */ {
    actual fun <!LINE_MARKER("descr='Has declaration in common module'")!>foo<!>(): Int = 100500
}